fixed floating with summary so it is not kicked down if matrix info box gets too long

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -311,8 +311,8 @@ span.homepage-top {
 }
 #below-matrix {
 	padding-top: 40px;
-	clear: both;
 	width: 680px;
+	float: left;
 }
 
 /* the key */
